--- a/package.json
+++ b/package.json
@@ -17,23 +17,28 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.25.1",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^10.0.0",
     "classnames": "^2.5.1",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
-    "postcss": "^8.5.3",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^3.3.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.99.7",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
     "react-router-dom": "^7.5.3"
