--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "@codemirror/lang-sql": "^6.8.0",
+    "@uiw/codemirror-theme-duotone": "^4.23.11",
+    "@uiw/react-codemirror": "^4.23.11",
     "react-router-dom": "^7.5.3"
   }
 }
