--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@uiw/codemirror-theme-duotone": "^4.23.11",
     "@uiw/react-codemirror": "^4.23.11",
     "axios": "^1.9.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.3"
   }
 }
