--- a/nginx.local.conf
+++ b/nginx.local.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+    root /dist;
+    index index.html;
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
