add current user rating

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,5 +2,17 @@ node_modules
 dist
 .git
 Dockerfile
-nginx.conf
+.env
+.env.*
 *.md
+.dockerignore
+docker-compose*
+nginx_conf
+nginx_logs
+backups
+init-scripts
+tests
+coverage
+.vscode
+.idea
+*.log
