--- a/nginx.local.conf
+++ b/nginx.local.conf
@@ -1,10 +1,54 @@
 server {
-    listen 80;
-    root /dist;
+    listen 88;
+    server_name localhost;
+
+    root /usr/share/nginx/html;
     index index.html;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
+    # === CORS Headers (общие) ===
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+
+    # === Кэширование для статики ===
+    location ~* \.(?:js|css|woff2?|ttf|otf|eot|svg|ico|jpg|jpeg|png|gif|webp)$ {
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000, immutable";
+        access_log off;
     }
+
+    # === Кэширование HTML (короткое) ===
+    location ~* \.html$ {
+        expires 1h;
+        add_header Cache-Control "no-cache";
+    }
+
+    # === Fallback для SPA ===
+    location / {
+        try_files $uri $uri/ /index.html;
+
+        # OPTIONS preflight
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
+
+    # === GZIP ===
+    gzip on;
+    gzip_types
+        text/plain
+        text/css
+        application/json
+        application/javascript
+        text/xml
+        application/xml
+        application/xml+rss
+        text/javascript;
 }
