--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.4.31",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.6",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "style-loader": "^4.0.0",
